completes RestaurantsController